--- a/Result/index.html
+++ b/Result/index.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body><br><br>
-    <h1 style="text-decoration: underline;">ABES ENGINEERING COLLEGE</h1><h1 style="text-decoration: underline;">GHAZIABAD</h1><br>
+    <h1 style="text-decoration: underline;">SIDDHARTH ENGINEERING COLLEGE</h1><h1 style="text-decoration: underline;">GHAZIABAD</h1><br>
     <img src="ABES.png" height="200" width="160">
     <br><br>
     <h2>Generate Your Result</h2>
